Added functionality to the ConditionsAddMenu and ConditionsMenu.